package de.dhbw.karlsruhe.getraenkeabrechnung.io2;

public interface Writer {
    void writeLine(String line);

    void write(String str);
}
